# hw-mockup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  client_app.py  core.py  hw_server.py  pyproject.toml  web_app.py
docs/: ARCHITECTURE.md  DEVLOG.md  ENDPOINTS.md
keycar_client/: config.py
keycar_client/core/: errors.py  models.py  service.py
keycar_client/transport/: http_client.py
scripts/: run_client.ps1  run_server.ps1  test.ps1
tests/: test_smoke.py
